# FlappyGoose

./: Cargo.toml  Makefile  README.md  bin2u32arr.sh  crt0.s  gba.json  linker.ld
docs/: FlappyGoose.gba  README.md  index.html
src/: LICENSE.md  assets.rs  base.rs  bmp_tools.rs  gba.rs  lib.rs  lib.rs.bak  title.rs
src/assets/: bg.c  bg.pcx  sprites.pcx
