[package]
name = "gbarust"
version = "0.1.0"
authors = ["dennis.ranke@gmail.com"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["staticlib"]

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
